--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "compression": "^1.7.0",
     "cookie-parser": "~1.4.3",
     "cryptocoins-icons": "^2.5.0",
     "debug": "~2.6.3",
