--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cookie-parser": "~1.4.3",
     "cryptocoins-icons": "^2.5.0",
     "debug": "~2.6.3",
-    "express": "~4.15.2",
+    "express": "^4.15.5",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "node.bittrex.api": "^0.4.4",
