--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "copy-files": "cp -r ~/react-portfolio/build/* ~/react-portfolio-backend/public"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -11,8 +12,10 @@
     "cookie-parser": "~1.4.3",
     "cryptocoins-icons": "^2.5.0",
     "debug": "~2.6.3",
+    "dotenv": "^4.0.0",
     "express": "^4.15.5",
     "jade": "~1.11.0",
+    "letsencrypt-express": "^2.0.6",
     "morgan": "~1.8.1",
     "node.bittrex.api": "^0.4.4",
     "serve-favicon": "~2.4.2",
