--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.5",
+    "helmet": "^3.8.1",
     "jade": "~1.11.0",
     "letsencrypt-express": "^2.0.6",
     "morgan": "~1.8.1",
